--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.1.0",
     "@uidotdev/usehooks": "^2.4.1",
+    "clsx": "^2.1.0",
     "framer-motion": "^11.0.3",
+    "lucide-react": "^0.331.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "@reduxjs/toolkit": "^2.1.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
