--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "^0.0.14",
+    "@react-email/render": "^0.0.12",
+    "@react-email/tailwind": "^0.0.14",
     "@react-hook/mouse-position": "^4.1.3",
     "@reduxjs/toolkit": "^2.1.0",
     "@uidotdev/usehooks": "^2.4.1",
@@ -20,17 +24,21 @@
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.331.0",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.9",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
